# loops

./: .gitignore  README.md  cabal.config  default.nix  free-loops.cabal  loops.cabal  shell.nix
bench/: Bench.hs  DumbBench.hs
bench/Bench/: ForEach.hs  Loop.hs  Sum.hs  Unroll.hs
bench/Bench/Loop/: Sum.hs
src/Control/: Loop.hs
src/Control/Loop/: ForEach.hs  Internal.hs  LoopPrim.hs  Prim.hs
src/Control/Monad/: Loop.hs  ReallyStrictState.hs
src/Control/Monad/Loop/: Class.hs  ForEach.hs  Internal.hs  Static.hs  Unroll.hs
src/Data/: Unroll.hs
src/Data/Foldable/: For.hs
src/Data/Foldable/For/Vector/: Mutable.hs
src/Data/Functor/: ContId.hs  UnboxIdentity.hs
test/: Test.hs
test/Test/: List.hs  Sum.hs  Vector.hs
test/Test/Loop/: Sum.hs
