name:                free-loops
version:             0.1.0.0
synopsis:            Fast imperative-style loops as a free monad EDSL
description:
  @free-loops@ is a library for fast, imperative-style loops in Haskell. The
  library is implemented as a free monad EDSL. @Do@-notation is used to
  construct nested loops, providing a cleaner syntax than manual recursion.
  Loops cannot allocate intermediate data structures so performance does not
  rely on stream fusion.
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
-- copyright:
category:            Control
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Control.Loop
    Control.Monad.Loop
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.7 && <5,
    bifunctors >=4.1 && <5,
    free >=4.7 && <5,
    strict >=0.3 && <1,
    transformers >=0.3 && <1
  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
