name:                free-loops
version:             0.1.0.0
synopsis:            Fast imperative-style loops as a free monad EDSL
description:
  @free-loops@ is a library for fast, imperative-style loops in Haskell. The
  library is implemented as a free monad EDSL. @Do@-notation is used to
  construct nested loops, providing a cleaner syntax than manual recursion.
  Loops cannot allocate intermediate data structures so performance does not
  rely on stream fusion.
  .
  For best performance, please compile your code with @-O -fliberate-case
  -fspec-constr@ or @-O2@. If you are using GHC's LLVM backend, you should also
  use @-optlo-O2 -optlc-O2@ (by default, GHC sets an LLVM optimization level
  that is too low). The LLVM backend generally produces faster executables.
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (c) Thomas Tuegel 2014
category:            Control
build-type:          Simple
extra-source-files:  README.md, README.lhs
cabal-version:       >=1.10

library
  exposed-modules:
    Control.Monad.Loop
    Control.Monad.Loop.ForEach
    Control.Monad.Loop.Internal
  other-modules:
  -- other-extensions:
  build-depends:
    base >=4.7 && <5,
    bifunctors >=4.1 && <5,
    free >=4.8 && <5,
    primitive >=0.5 && <1,
    transformers >=0.3 && <1,
    vector >=0.10 && <1
  ghc-options: -Wall -fliberate-case -fspec-constr
  hs-source-dirs: src
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Test.hs
  other-modules:
    Test.Sum
  build-depends:
    base >=4.7 && <5,
    free-loops,
    tasty >=0.8 && <1,
    tasty-quickcheck >=0.8 && <1
  ghc-options: -Wall -fliberate-case -fspec-constr
  default-language: Haskell2010

benchmark benchs
  type: exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    Bench.hs
  other-modules:
    Bench.Sum
  build-depends:
    base >=4.7 && <5,
    criterion >=0.8 && <1,
    free-loops,
    transformers >=0.3 && <1,
    vector >=0.10 && <1
  ghc-options: -Wall -fliberate-case -fspec-constr
  default-language: Haskell2010
